updated some paths
